--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,7 @@
 #### EDIT THIS
 title = "Your website"
+# repo to publish
+githubPublish = "schollz/schollz.github.io"
 ####
 baseURL = ""
 languageCode = "en-us"
@@ -18,8 +20,8 @@ pygmentsCodeFences=true
   analytics=true
   style="4"
   intro = """<p>This site has my notes on recent <a href="/tags/thoughts">thoughts</a>. These thoughts are my own and do not reflect my employer.</p>"""
-  quoteServer = "https://randomquote.schollz.com"
-  commentServer = "https://guestbook.schollz.com"
+  # quoteServer = "https://randomquote.schollz.com"
+  # commentServer = "https://guestbook.schollz.com"
 
 
 [outputs]
